--- a/docs/random-beacon/upgrade-authorizations.adoc
+++ b/docs/random-beacon/upgrade-authorizations.adoc
@@ -97,30 +97,32 @@ Each service contract has a _Operator Contract Upgrader_ who can add used operat
 
 If a operator contract has been `DISABLED` by the _Panic Button_, it is ineligible for work selection. This must be checked when the service contract selects an operator contract.
 
-==== Staking contracts
+==== Staking contracts: authorized operator contracts
 
-Staking contracts hold staked tokens and enforce staking rules. They permit authorized operator contracts to slash the stakes of misbehaving operators, but stakers are protected from code they haven't authorized individually.
+Staking contracts hold staked tokens,
+enforce staking rules,
+and punish misbehaving operators
+on behalf of authorized operator contracts.
+For this purpose,
+each staking contract tracks which operator contracts
+have been authorized by which addresses.
 
-For this purpose, each staking contract maintains a list of operator contracts that have been authorized by each staker's _Authorizer_. The list of operator contracts could also be maintained globally, removing the need for entry duplication when stakers on different staking contracts have the same Authorizer and operate on the same operator contract. However, maintaining the authorizations locally may be cheaper than cross-contract calls, and the scenario where gas would be saved is likely to be rare.
+The _authorized operator contracts_ are a mapping
+of `(address authorizer, address operator_contract) -> status`.
 
-TODO: Define fully backed operation? I don't see it anywhere else?
-(If _fully backed operation_ is used, it may not be necessary to have separate authorizations as stakes are explicitly allocated for each operator contract.)
+The status of a contract may be either `NULL` or `AUTHORIZED`.
+A status of `NULL` is the default
+and means the operator contract is not authorized.
+A status of `AUTHORIZED` means that the operator contract
+may impose punishments on those operators
+who have assigned that `authorizer` as their _Authorizer_.
 
-TODO: What is the token contract? I don't see this defined anywhere?
-Staking contracts are also aware of the token contract by necessity.
-
-===== Authorized operator contracts
-
-The _authorized operator contracts_ are a mapping of `(address authorizer, address operator_contract) -> status`.
-
-The status of a contract may be either `NULL` or `AUTHORIZED`. A status of `NULL` is the default and means the operator contract is not authorized. A status of `AUTHORIZED` means that the operator contract may affect the stakes of those stakers who have assigned that `authorizer` as their _Authorizer_.
-
-To authorize a operator contract on a staking contract, the following conditions must apply:
-
-- the operator contract has been `APPROVED` on the _registry_
-- the operator contract recognizes the staking contract
-
-Once a operator contract has been authorized, authorization cannot be withdrawn by the staker. However, a operator contract that has been `DISABLED` by the _Panic Button_ may not punish stakers.
+To authorize an operator contract on a staking contract,
+the operator contract must have been `APPROVED` on the _registry_.
+Once a operator contract has been authorized,
+authorization cannot be withdrawn by the authorizer.
+However, a operator contract that has been `DISABLED` by the _Panic Button_
+may not punish stakers.
 
 === Upgrade processes
 
