--- a/docs/random-beacon/upgrade-authorizations.adoc
+++ b/docs/random-beacon/upgrade-authorizations.adoc
@@ -2,7 +2,9 @@
 :numbered:
 toc::[]
 
-==== Roles
+== Authorizations and contract upgrades
+
+=== Roles
 
 Governance::
 
@@ -49,7 +51,7 @@ may punish the operator for misbehavior.
 The operator can only perform work for authorized operator contracts.
 The Authorizer cannot be rekeyed except by undelegating and redelegating.
 
-=== Types of contracts
+=== Authorizations
 
 ==== The Registry and Panic Button
 
@@ -73,28 +75,6 @@ to set the status of an `APPROVED` contract to `DISABLED`.
 Operator Contracts disabled with the _Panic Button_ cannot be re-enabled,
 and disabled contracts may not punish operators
 nor be selected by service contracts to perform work.
-
-==== Service contracts: used operator contracts
-
-Service contracts use the basic functionality performed by operator contracts,
-to provide useful services to the public.
-Service contracts can use multiple different versions of operator contracts
-to perform the operator contract functions.
-To permit system upgrades,
-the list of used operator contracts can be updated with proper authorization.
-
-A service contract is deployed with zero operator contracts,
-rendering the service contract inactive
-until at least one operator contract is activated.
-
-Each service contract has its own _Operator Contract Upgrader_
-who can add used operator contracts.
-To add a used operator contract,
-the operator contract must have been `APPROVED` on the _registry_.
-
-If an operator contract has been `DISABLED` by the _Panic Button_,
-the service contract must not use its functionality.
-This must be checked when the service contract selects an operator contract.
 
 ==== Staking contracts: authorized operator contracts
 
@@ -122,6 +102,28 @@ Once a operator contract has been authorized,
 authorization cannot be withdrawn by the authorizer.
 However, a operator contract that has been `DISABLED` by the _Panic Button_
 may not punish stakers.
+
+==== Service contracts: used operator contracts
+
+Service contracts use the basic functionality performed by operator contracts,
+to provide useful services to the public.
+Service contracts can use multiple different versions of operator contracts
+to perform the operator contract functions.
+To permit system upgrades,
+the list of used operator contracts can be updated with proper authorization.
+
+A service contract is deployed with zero operator contracts,
+rendering the service contract inactive
+until at least one operator contract is activated.
+
+Each service contract has its own _Operator Contract Upgrader_
+who can add used operator contracts.
+To add a used operator contract,
+the operator contract must have been `APPROVED` on the _registry_.
+
+If an operator contract has been `DISABLED` by the _Panic Button_,
+the service contract must not use its functionality.
+This must be checked when the service contract selects an operator contract.
 
 === Upgrade processes
 
