--- a/docs/rfc/rfc-5-stake-delegation-specification.adoc
+++ b/docs/rfc/rfc-5-stake-delegation-specification.adoc
@@ -79,10 +79,8 @@ tokens, it should be noted that a malicious operator can exploit stake slashing
 to destroy tokens and thus the entire staked amount is indeed at stake.
 
 The operator address is used to provide network functionality by
-<<operating, participating in various operations>>. A signature from the
-operator is also required to initiate <<delegating, stake delegation>>, and the
-operator can unilaterally <<undelegating, finish delegation>> and 
-<<restoring, restore the tokens to the owner>>.
+<<operating, participating in various operations>>and can unilaterally 
+<<undelegating, finish delegation>> and <<restoring, restore the tokens to the owner>>.
 
 === Magpie
 
