Add interface match requirement for service contracts
An operator contract can only be activated on a service contract
if the operator contract's (claimed) implemented interface
matches the service contract.
This prevents cross-activation of operator contracts with conflicting interfaces
on service contracts for a different service,
and ensures that a compromised Operator Contract Upgrader
can cause very little trouble on its own.

--- a/docs/random-beacon/authorizations.adoc
+++ b/docs/random-beacon/authorizations.adoc
@@ -119,7 +119,9 @@ until at least one operator contract is activated.
 Each service contract has its own _Operator Contract Upgrader_
 who can add used operator contracts.
 To add a used operator contract,
-the operator contract must have been `APPROVED` on the _registry_.
+the operator contract must have been `APPROVED` on the _registry_,
+and the interface it claims to implement
+must match what the service contract expects.
 
 If an operator contract has been `DISABLED` by the _Panic Button_,
 the service contract must not use its functionality.
