--- a/docs/random-beacon/slashing.adoc
+++ b/docs/random-beacon/slashing.adoc
@@ -2,7 +2,7 @@
 :numbered:
 toc::[]
 
-== Background
+== Misbehavior and punishments
 
 To incentivize correct behavior in the Keep network,
 misbehaving participants will be punished. In some situations,
@@ -10,18 +10,16 @@ proving misbehavior requires cooperation from another participant,
 a _tattletale_. This coordination is incentivized by rewarding the _tattletale_
 by granting them a fraction of the tokens taken from the misbehaving participant.
 
-=== Implementation
-
 Tokens are staked by transferring them to the staking contract.
 The staking contract tracks the stake allocated to each _staker_.
 Stakes can be _slashed_ to punish misbehavior.
 Tokens backing slashed stakes are burned;
 if a tattletale proves another operator's misbehavior
 they will receive 5% of the slashed tokens,
-the remainder being burned. The misbehaving operator will then be removed from its group.
+the remainder being burned.
+The misbehaving operator will then be removed from its group.
 
 ==== Authorization
-TODO: Where are operator contracts described?
 
 _Operator contracts_ are authorized to impose penalties
 by stakers' _authorizers_.
@@ -248,77 +246,7 @@ The proof of failure is _objective_.
 When a group fails to produce an entry, all of its members will be subject to _seizing_ and the group itself will be terminated. The submitter of the trigger transaction will be treated as the _tattletale_, but the tattletale reward will be limited to `min(1, 20 / group_size)` of the maximum, or effectively the minimum stake of a single member. This is to prevent actors in a lynchpin position from profitably stealing other stakers' funds.
 
 
---- TODO: Are the following needed in the YP at all?
 === Limitations
 
 Slashing is not limited to the amount originally staked for participating in the relevant operations; a malfunctioning operator contract could cause a staker to lose all stake. Chain reorganizations may lead to honest behavior in one branch being punishable misbehavior in another. Mitigations for this have not been included in this RFC.
 
-== Future Work
-
-With a different staking paradigm
-that tracks individual keep and group memberships,
-it is possible to limit the risk
-from malfunctioning operator contracts or trusted applications
-to the stake actually corresponding to the operations.
-
-=== Authorization
-
-This RFC doesn't cover authorizing individual keeps,
-or situations where a trusted application
-has the authority to impose a penalty.
-
-Because authorizations cannot be revoked,
-operator contracts can safely cache positive authorization
-after the first lookup to the staking contract.
-Lack of authorization cannot be cached,
-as the operator contract could later become authorized.
-
----
-
-=== Punishments
-
-==== DKG
-
-===== Failure to produce a DKG result
-
-Punishing the failure to produce a DKG result
-has interesting implications that could be explored further.
-
-===== Disqualification in DKG
-
-However, disqualification is defined by there being _objective_ off-chain proof, so the operator contract is made to verify DKG transcripts
-to render DKG disqualification _objective_ on-chain as well.
-
-Disqualified members must be removed from the group. If disqualification is objectively proven, the operator will be punished with _seizing_ their stake. The submitter of the transaction containing the DKG transcript will be the _tattletale_.
-
-==== Signing
-
-===== Invalid signature share
-
-Invalid signature shares can only be detected on-chain if a tattletale submits a proof that includes the signature share and the information required to verify it. 
-
-TODO: Does the implemented version of this include a merkle root?
-If the DKG result includes a merkle root of each member's individual public key,
-this proof can be relatively compact and inexpensive to verify.
-
-Proof of an invalid signature share is _objective_.
-
-If the broadcast of an invalid signature share is proven the responsible operator shall be punished by _seizing_, with the submitter of the proof receiving the tattletale reward.
-
-===== Unauthorized use of individual private key
-
-Unauthorized use of a member's individual private key can be proven on-chain by the submission of a suitable proof. The proof must contain the DKG merkle root, a merkle path to the individual public key, some value that isn't a requested entry, and a valid signature of that value with the individual public key.
-
-Such proof is _objective_.
-
-Unauthorized use of an individual private key will be punished by _seizing_, with the submitter of the proof as the _tattletale_.
-
-=== Chain reorganizations
-
-TODO: This doesn't describe how the protocol handles this phenomenon?
-When chain reorganizations happen,a honest entry generation in one branch can be indistinguishable from frontrunning in the other. It is easy to punish the generation of unauthorized threshold signatures on values that aren't a part of the entry chain, and this can serve as a way to incentivize actors that have compromised the group private key of some group to destroy the group for immediate profit instead of covertly frontrunning the beacon. However, actual frontrunning is more difficult to deal with.
-
-[bibliography]
-== Related Links
-
-- link:rfc-14-token-grants.adoc[RFC 14: Token grants]
