--- a/docs/random-beacon/slashing.adoc
+++ b/docs/random-beacon/slashing.adoc
@@ -163,125 +163,47 @@ and other checks on the operator's eligibility for work selection.
 Any address that holds tokens can call `burn(amount sum)`
 to burn `sum` tokens, limited by tokens held by the address.
 
-=== Misbehavior and penalties in the Random Beacon
+=== Punishable misbehavior
 
-==== DKG
+===== Failure to sign an entry
 
-===== Invalid ticket
+If a signing group is tasked with producing a beacon entry,
+but fails to submit a valid entry within the allotted deadline,
+each member in the group is punished by _seizing_
+and the group itself will be terminated.
 
-Invalid tickets are detected automatically
-without the need for a tattletale. Proof of invalid tickets is _objective_,
-as all information required to verify tickets is available on-chain. Because the cost of ticket submission is paid by the submitter,
-the ticket can be simply rejected and the transaction reverted.
+The punishment is triggered by calling `reportRelayEntryTimeout()`
+once the deadline has been reached.
+The submitter of the trigger transaction will be treated as the _tattletale_,
+but the tattletale reward will be limited
+to `min(1, 20 / group_size)` of the maximum,
+or effectively the minimum stake of a single member.
+This is to prevent actors in a lynchpin position
+from profitably stealing other stakers' funds.
 
-===== Failure to produce a DKG result
-TODO: What is the trigger transaction?
+===== Unauthorized use of group signing key
 
-Failure to finish DKG is verifiable without additional proof,
-but requires a trigger transaction for this verification
-after the deadline for completing DKG has passed.
-If no other trigger transaction is made,
-the trigger transaction for another DKG shall check
-if the previous attempt at DKG has failed to produce a result.
+If the group signing key of a signing group has been leaked,
+it can be proven by using the key to sign the address of the group
+and calling `reportUnauthorizedSigning(groupIndex, signedAddress)`.
 
-TODO: is objective a function?
-Failure to finish DKG is _objective_.
-
-Failure to produce a result will not be explicitly penalized as the participants will forfeit their ticket submission fees. 
-
-===== Submitting an invalid DKG result
-
-Invalid DKG results are detected automatically.
-
-Proof of invalid DKG results is _objective_.
-
-Submitters are not explicitly penalized for submitting an invalide ticket. They are however, not reimbursed. 
-
-===== Inactivity in DKG
-
-An operator might fail to send a required message during DKG. This lowers the effective safety margin of the group
-against lynchpinning and inability to produce a signature.
-
-Inactivity in DKG is determined by the list of inactive members in the DKG result submission.
-
-TODO: are we following some specific techinical descriptions of _subjective_ and _objective_?
-
-Unless DKG is performed on-chain, proof of inactivity in DKG is _subjective_ and subject to the honest majority assumption; a dishonest majority could always forge a false proof of inactivity. It is not possible to make off-chain DKG inactivity objectively provable.
-
-Inactive members will be removed from the group, but not otherwise punished; the opportunity cost of not being included in the group already provides an incentive to be active.
+If the signature is valid for the public key of the signing group,
+it proves that the key has been used without authorization.
+Each member of the signing group is punished by _seizing_
+and the group is terminated.
+The submitter of the trigger transaction
+receives the maximum tattletale reward.
 
 ===== Disqualification in DKG
 
-Disqualification in DKG is determined like inactivity,
-by the list of disqualified members being included in the result submission. On-chain proof of disqualification is _subjective_
-and a dishonest majority could forge a false proof.
+If an operator misbehaves during DKG,
+and is included among the disqualified operators
+when a valid DKG result is submitted,
+the misbehaving operator is punished by _seizing_
+and removed from the created group.
+The submitter of the DKG result
+receives the maximum tattletale reward.
 
-TODO: Is this true for the current implementation?
-Punishing disqualified members based on subjective proof creates opportunities for dishonest majorities to attack other stakers
-in a way which extends beyond the damage caused by frontrunning the beacon. Because of this, punishing disqualified members without objective proof requires further examination of the associated risks and incentives.
-
-For the first version, disqualification shall be treated like inactivity and only punished with removal from the group.
-
-==== Signing
-
-===== Invalid signature share
-
-Invalid signature shares can only be detected on-chain if a tattletale submits a proof that includes the signature share and the information required to verify it.
-
-TODO: What has been implemented in the current version?
-In the first version,
-the infrastructure for verifying these proofs is not yet in place.
-Invalid signature shares shall be simply rejected by the other members.
-
-===== Failing to broadcast a signature share
-
-Failure of an individual member to broadcast a signature share
-can not be reliably detected on-chain,
-even in the event the group as a whole fails to produce a signature.
-Thus, individual failures to broadcast shares shall not be punished.
-
-===== Submitting an invalid signature
-
-An operator may submit an invalid threshold signature on-chain
-when generating a beacon entry, and these are automatically detected.
-
-Proof of an invalid threshold signature is _objective_.
-
-TODO: Who is verifying the signature? The submitter or the group? 
-
-As verifying a threshold signature is relatively expensive,
-no separate punishment is needed beyond reverting the transaction.
-
-===== Unauthorized use of individual private key
-
-Unauthorized use of a member's individual private key
-can be proven on-chain by the submission of a suitable proof.
-
-TODO: Is this currently true?
-The first version is not yet able to verify these proofs,
-so unauthorized use of individual private keys is not separately penalized.
-
-===== Creating an unauthorized signature
-
-An entire signing group's private key could be abused to create an unauthorized signature.
-
-Unauthorized threshold signing can be proven by publishing a value the group hasn't been previously requested to sign, and a valid signature for the value. Proof of unauthorized signing is _objective_.
-
-Unauthorized signing will be punished by _seizing_ tokens from all members, based on submission of a proof from the _tattletale_.
-
-===== Failure to produce a signature
-
-A signing group may fail to produce a new entry within the deadline. This can be verified on-chain without a separate proof,
-but requires a transaction to trigger this check.
-
-TODO: What is the triggering transaction called?
-
-The proof of failure is _objective_.
-
-When a group fails to produce an entry, all of its members will be subject to _seizing_ and the group itself will be terminated. The submitter of the trigger transaction will be treated as the _tattletale_, but the tattletale reward will be limited to `min(1, 20 / group_size)` of the maximum, or effectively the minimum stake of a single member. This is to prevent actors in a lynchpin position from profitably stealing other stakers' funds.
-
-
-=== Limitations
-
-Slashing is not limited to the amount originally staked for participating in the relevant operations; a malfunctioning operator contract could cause a staker to lose all stake. Chain reorganizations may lead to honest behavior in one branch being punishable misbehavior in another. Mitigations for this have not been included in this RFC.
-
+It should be noted that a dishonest majority could punish honest operators.
+However, such behavior can be proven off-chain
+by presenting a DKG transcript conflicting with the accepted result.
